--- a/Clientes.html
+++ b/Clientes.html
@@ -128,7 +128,7 @@
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-5">
             <h1 class="h2">Panel Principal de Clientes!</h1>
 
-            <h2 class="mt-4 d-flex align-items-center">Clientes
+            <h2 class="mt-4 d-flex align-items-center">
                 <button class="btn btn-primary btn-sm ml-3" data-bs-toggle="modal" data-bs-target="#addClientModal">Nuevo
                     Cliente</button>
             </h2>
@@ -325,7 +325,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cerrar</button>
-                    <button type="button" class="btn btn-primary" onclick="agregarCliente()">Agregar Usuario</button>
+                    <button type="button" class="btn btn-primary" onclick="agregarCliente()">Agregar nuevo cliente</button>
                 </div>
             </div>
         </div>
